EFK/ingress_resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ui
  namespace: efklog
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
#    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: 
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kibana-logging
            port: 
              number: 5601
